# acpica-sys

./: .gitlab-ci.yml  Cargo.toml  README.md  _Makefile  build.rs  update-bindings.sh
acpica/source/components/utilities/: utclib.c
acpica/source/include/platform/: acbespin.h  acenv.h  acenv.h.rej  acnrk.h  acrobigalia.h
patches/: add-robigalia.patch
src/: lib.rs  raw32.rs  raw64.rs
