# Copyright (c) 2015 The Robigalia Project Developers
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license <LICENSE-MIT
# or http://opensource.org/licenses/MIT>, at your option. All files in the
# project carrying such notice may not be copied, modified, or distributed
# except according to those terms.
[package]
name = "acpica-sys"
version = "0.0.4"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "Bindings to the ACPI Component Architecture"
documentation = "https://doc.robigalia.org/acpica_sys"
repository = "https://gitlab.com/robigalia/acpica-sys"
readme = "README.md"
license = "MIT OR Apache-2.0"
build = "build.rs"
